syntax = "proto3";

package question.v1;
option go_package = "github.com/studyguides-com/study-guides-api/api/v1/question;questionv1";

import "v1/shared/question.proto";
import "v1/shared/reporttype.proto";

message ForTagRequest {
    string tag_id = 1;
}

message QuestionsResponse {
  repeated shared.v1.Question questions = 1;
}

message QuestionResponse {
  shared.v1.Question question = 1;
}

message ReportQuestionRequest {
  string question_id = 1;
  shared.v1.ReportType report_type = 2;
  string reason = 3;
}

message ReportQuestionResponse {
  bool success = 1;
}

service QuestionService {
  rpc ForTag(ForTagRequest) returns (QuestionsResponse);
  rpc Report(ReportQuestionRequest) returns (ReportQuestionResponse);
}

